<resources>
    <string name="app_name">Формула здоровья</string>
    <string name="search">Готово</string>
    <string name="result">Результат</string>
    <string name="id1">Вес(кг)</string>
    <string name="id2">Рост(см)</string>
    <string name="id3">Возраст(год)</string>
    <string name="pol1">Муж</string>
    <string name="pol2">Жен</string>
    <string name="grud">Обхват груди(см)</string>
    <string name="zal">Тренировки дома</string>
    <string name="dom">Тренировки в зале</string>
    <string name="ectomorf3">"День 1 (грудь + плечи + трицепс)\n"
                                "1)Жим штанги лежа на горизонтальной скамье 4х12,10,8,6 \n"
                                "2)Жим в Смите на наклонной скамье 3х10\n"
                                "3)Отжимания на брусьях 3х10-15 \n"
                                "4)Жим лежа узким хватом 3х10 \n"
                                "5)Жим Арнольда 4х12\n"
                                "6)Тяга штанги к подбородку широким хватом 4х12-15"
                                "1)День 2 (спина + бицепс)\n"
                                "2)Становая тяга 4х12,10,8,6 \n"
                                "3)Подтягивания широким хватом 4х10-15 \n"
                                "4)Тяга гантели в наклоне одной рукой 3х10 \n"
                                "5)Горизонтальная тяга блока 3х10 \n" "Подтягивания узким обратным хватом 4х10-12\n"
                                "День 3 (ноги + пресс)\n"
                                "1)Приседания со штангой на плечах 4х12,10,8,6\n	"
                                "2)Жим ногами в тренажере 3х10-12\n	"
                                "3)Румынская тяга с гантелями 4х10-12\n	"
                                "4)Выпады с гантелями 3х10\n "
                                "5)Подъемы на носки в тренажере 4х15\n"
                                "6)Скручивания в тренажере 3х12-15\n	"
                                "7)Обратные скручивания на скамье 3х10-15"</string>
    <string name="maly">"Вы еще слишком малы.Ваш организм еще не сформирован до конца.\n
        "Предлагаем вам режим тренировок:\n"
        "День 1:\n"
        "1)Отжимания 2-3х10-15 раз\n"
        "2)Подтягивания 5-10 раз\n"
        "3)Берпи 10-15 раз\n"
        "День 2:\n"
        "1)Приседания 2-3х20 раз\n"
        "2)Пресс 2-3х30 раз\n "
        "3)Подтягивания 5-10раз\n"</string>
    <string name="malyE">"Питайтесь полноценно 3 раза в день."</string>
    <string name="ectomorf2"> "День 1(верхние мышцы):\n"
        "1)Жим штанги лежа на горизонтальной скамье 4х12,10,8,6 \n"
        "2)Жим гантелей на наклонной скамье 3х10-12 \n"
        "3)Подтягивания широким хватом 4х10-15\n "
        "4)Тяга штанги в наклоне 4х10 \n"
        "5)Армейский жим 4х10-12 \n"
        "6)Скручивания на скамье 3х12-15\n"
        "День 2(нижние мышцы):\n"
        "1)Приседания со штангой на плечах 4х12,10,8,6 \n"
        "2)Жим ногами в тренажере 3х10-12\n "
        "3)Становая тяга на прямых ногах 4х10-12\n "
        "4)Выпады со штангой на плечах 3х10 \n"
        "5)Подъемы на носки с весом 4х15\n "
        "6)Подъемы ног в висе на перекладине 3х10-15"</string>
    <string name="mezomorf">"День 1(грудь, трицепс, передние дельты)\n"
       "1)Жим штанги на скамье — 4 х 8-10\n"
    "2)Отжимания на брусьях — 4 х 8-12\n"
    "3)Жим штанги стоя — 4 х 8-10\n"
    "4)Разведения гантелей на наклонной скамье — 4 х 8-12\n"
    "5)Обратные отжимания на скамье — 3-4 х 8-12\n"
    "6)Подъем гантелей перед собой стоя — 3-4 х 10-12\n"
    "7)Французский жим лежа — 3-4 х 8-12\n"
    "День 2(спина, бицепс, задние дельты)\n"
    "1)Подтягивания — 4 х 10-15\n"
    "2)Обратные разведения гантелей лежа — 4 х 12-15\n"
    "3)Тяга штанги к поясу в наклоне — 4 х 8-10\n"
    "4)Подъемы на бицепс — 3-4 х 8-12\n"
    "5)Тяга верхнего блока — 4 х 8-10\n"
    "6)Махи гантелями в наклоне — 3-4 х 12-15\n"
    "7)Гиперэкстензия — 4 х 12-15\n"
    "День 3(ноги, пресс, кардио)\n "
    "1)Беговая дорожка в режиме HIIT — 10 минут\n"
    "2)Подъемы ног в висе — 4 х 8-12\n"
    "3)Становая тяга — 4 х 8-10\n"
    "4)Скручивания с роликом — 3-4 х 8-10\n"
    "5)Приседания со штангой — 4 х 8-10\n"
    "6)Планка — 4 х 60-90 сек\n"
    "7)Разгибания ног в тренажере — 4 х 8-10\n"</string>>
    <string name="endomorf">"День 1(ноги)\n"
    "1)Приседания со штангой 3-4 х 6-12\n"
    "2)Жим ногами лёжа 3-4 х 6-12\n"
    "3)«Мёртвая» тяга 3-4 х 6-12\n
    "4)Подъём на носки стоя в тренажёре 3-4 х 15-20\n"
    "5)Разгибания ног в тренажёре 4 х 8-12\n"
    "6)Сгибания ног в тренажёре 4 х 8-12\n"
    "1)День 2(Спина,плечи)\n"
    "2)Подтягивания: 3-4 х 6-12\n"
    "3)Тяга штанги в наклоне 3-4 х 6-12\n"
    "4)Тяга гантели в наклоне: 3-4 х 6-12\n"
    "5)Жим гантелей сидя: 3-4 х 6-12\n"
    "6)Тяга штанги к подбородку (протяжка) 3-4 х 6-12\n"
    "7)Махи гантелями в стороны (стоя): 4 х 8-12\n"
    "День 3(Руки,грудь)\n"
    "1)Жим штанги на наклонной скамье (20-30 градусов)  3-4 х 6-12\n"
    "2)Жим гантелей на наклонной скамье (20-30 градусов) 3-4 х 6-12\n"
    "3)Жим лёжа узким хватом (в Смите) 3-4 х 6-12\n"
    "4)Отжимания на брусьях  3-4 х 6-12\n"
    "5)Французский жим лёжа 3 х 6-12\n"
    "6)Подъём штанги на бицепс 4 х 6-12\n"</string>
    <string name="ectomorfD">
        "День 1(плечи,грудь)\n"
        "1)Глубокие отжимания на стульях с возвышенности средним хватом 5х8-12
        "2)Отжимания от пола с возвышенности средним хватом 4хmax\n"
        "3)Отжимания на спинках стульев с наклоном тела вперёд  5х10 - 12\n"
        "4)Классические отжимания 5х10\n"
        "5)Махи в стороны  4х10 - 12 повторений.\n"
        "6)Махи перед собой 4х10 - 12 повторений.\n"
        "День 2(Ноги,бицепс)\n"
        "1)Приседания со штангой или пакетами 5х15 - 20\n"
        "2)Подъём на стул со штангой или пакетами 5х10 - 15\n"
        "3)Выпады со штангой или пакетами 4х10 - 15\n"
        "4)Подъём на носки со штангой или пакетами 3х20 - 30\n"
        "5)Подтягивания 3х max\n"
        "6)Отжимания классические 5х10-12\n"
        "День 3(Спина,трицепс,пресс)\n"
        "1)Отжимания широким хватом ( кисти в стороны ) 5х max\n"
        "2)Подтягивания 3х max\n"
        "3)Отжимания узким хватом 4х10 - 12\n"
        "4)Разгибания с гантелей из-за головы 5х10 - 12\n"
        "5)Скручивания на полу. 5х max\n"</string>
    <string name="mezomorfD">"День 1(грудь + трицепс + передняя и средняя дельты)\n"
    "1)Жим гантелей лежа на скамье или на полу	4х10-12\n"
    "2)Взрывные отжимания 3х10-15	Делаем хлопок руками в прыжке\n"
    "3)Отжимания широким хватом с ногами на возвышении 3х10-15\n"
    "4)Жим гантелей сидя или стоя 4х12\n"
    "5)Тяга гантелей к подбородку 4х12-15\n"
    "6)Французский жим лежа с гантелями	4х10-12\n"
    "День 2(спина + бицепс + задняя дельта)\n"
    "1)Подтягивания широким хватом 4х10-15\n"
    "2)Тяга гантели в наклоне одной рукой 4х10\n"
    "3)Подтягивания узким обратным хватом 3х10-15\n"
    "4)Пуловер с гантелью 4х12\n"
    "5)Сгибания рук с гантелями стоя 4х12\n"
    "6)Концентрированные сгибания с гантелей 3х12\n"
    "День 3(ноги + пресс)\n"
    "1)Приседания с гантелями 4х12\n"
    "2)Становая тяга на прямых ногах с гантелями 4х12\n"
    "3)Выпады с гантелями 4х10\n"
    "4)Подъемы на носки с весом	4х15\n"
    "5)Скручивания на полу с дополнительным весом 3х12-15\n"
    "6)Подъемы ног в висе на турнике 3х10-15\n"
</string>
    <string name="endomorfD">
        "День 1(грудь + трицепс + передняя и средняя дельты)\n"
        "1)Жим гантелей лежа на скамье или на полу	4х10-12	\n"
        "2)Отжимания с широкой постановкой рук с ногами на возвышении	4х10-15	\n"
        "3)Жим Арнольда	4х10-12	\n"
        "4)Тяга гантелей к подбородку	4х12-15\n"
        "5)Махи гантелей в стороны	3х15	\n"
        "6)Французский жим лежа с гантелями	3х10-12\n"
        "7)Отжимания с узкой постановкой рук	3х10-15	\n"
        "День 2(спина + бицепс + задняя дельта)\n"
        "1)Становая тяга с гантелями	4х10-12\n"
        "2)Подтягивания широким хватом	4х10-15	\n"
        "3)Тяга гантели в наклоне одной рукой	3х10\n"
        "4)Подтягивания узким обратным хватом	3х10-15\n"
        "5)Сгибания рук с гантелями стоя	4х10-12	\n"
        "6)Концентрированные сгибания с гантелей	3х10-12\n"
        "7)Махи гантелями в наклоне	4х15	\n"
        "День 3(ноги + пресс)\n"
        "1)Приседания с гантелями	4х12\n"
        "2)Становая тяга на прямых ногах с гантелями	4х10-12\n"
        "3)Выпады с гантелями	4х10	\n"
        "4)Подъемы на носки с весом	4х15\n"
        "5)Планка на локтях с дополнительным весом	3х60-90 сек\n"
        "6)Уголок в висе на турнике	3х40-60 сек\n"</string>
    <string name="devushki">
        "Тренировка 3 раза в неделю"
        "Отжимания 4×20\n"
        "Обратные скручивания на стуле 4×15\n"
        "Сгибания рук с гантелями 4×20\n"
        "Воздушные приседания 4×20\n"
        "Армейским жим с гантелями 4×15\n"
        "Становая тяга с гантелями 4×20\n"
    </string>
    <string name="devuskizal">
        "День 1\n"
        "1)Приседания со штангой 3-5 подходов 8-10 повторений\n"
        "2)Жим гантелей лежа 2-3 подхода 8-10 повторений\n"
        "3)Подтягивания 3-4 подхода 10-12 повторений\n"
        "4)Отжимания на брусьях 3-4 подхода 10-12 повторений\n"
        "5)Классические скручивания 4 подхода 20-25 повторений\n"
        "День 2\n"
        "1)Становая тяга 4-5 подходов 8-12 повторений\n"
        "2)Упражнение бабочка 4 подхода 15 повторений\n"
        "3)Жим ногами в тренажере 4 подхода 8-12 повторений\n"
        "4)Тяга гантелей в наклоне 4 подхода 15 повторений\n"
        "5)Французский жим 4 подхода 8-10 повторений\n"
        "6)Подъем штанги на бицепс 4 подхода 10-12 повторений\n"
        "7)Подъемы ног в висе 3 подхода – максимальное количество повторений\n"
    </string>
    <string name="sovet">
        "Cоветы для тренировок.\n"
        "1)Самое главное проводите разминку перед тренировкой,ведь травмы это явно не то что вам нужно\n"
        "2)Если вы не знаете как выполнять упражнение,то найдите его в интернете,изучите\n"
        "3)Тренируйтесь 2-3 дня(в зависимости от колличества тренировок) в неделю\n"
        "4)Соблюдайте режим питания.\n"
        "5)Выполняйте упражнения по технике,тогда результат будет на лицо в ближайщее время\n"
        "6)Если вы тренируетесь дома и у вас нет гантель,то используйте бутылки с водой\n"
        "7)Подбирайте веса самостоятельно ,учитывая колличество подходов\n"
        "8)Фотографируйте себя каждые 2 недели ,чтобы видеть результат\n"
        "9)Продукты питания.Углеводы:перловка, овсяная каша, гречка, рисовая, манная и другие крупы, мед, спелые фрукты и овощи.\n"
        "Белки:мясо куриное филе и говядина,яйца,рыба,творог,сыр.\n"
        "Жиры:баранина,авокадо,свинина,масло,яйца,рыба\n"
        "Желаем удачи в тренировках\n"
        "Приложение создала комания SMD"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
